--- a/layouts/exec.html
+++ b/layouts/exec.html
@@ -3,8 +3,8 @@
 <div class="arr-title">
 	<h1 class="title">{{ .Title }}</h1>
 </div>
-<div class="tasks-container">
-	<table class="table is-striped is-hoverable">
+<div class="tasks-container table-container">
+	<table class="table is-striped is-hoverable is-fullwidth">
 		<thead>
 			<tr>
 				<td scope="col">
